--- a/packages/PrintSpooler/res/values/strings.xml
+++ b/packages/PrintSpooler/res/values/strings.xml
@@ -22,6 +22,9 @@
     <!-- Label of the print dialog's print button. [CHAR LIMIT=16] -->
     <string name="print_button">Print</string>
 
+    <!-- Label of the print dialog's save button. [CHAR LIMIT=16] -->
+    <string name="save_button">Save</string>
+
     <!-- Label of the destination widget. [CHAR LIMIT=20] -->
     <string name="label_destination">DESTIINATION</string>
 
@@ -41,7 +44,7 @@
     <string name="label_pages">PAGES (<xliff:g id="page_count" example="5">%1$s</xliff:g>)</string>
 
     <!-- Page range exmple used as a hint of how to specify such. [CHAR LIMIT=15] -->
-    <string name="pages_range_example">e.g. 1&#8211;5, 8</string>
+    <string name="pages_range_example">e.g. 1&#8211;5, 8, 11&#8211;13</string>
 
     <!-- Title for the pring preview button .[CHAR LIMIT=30] -->
     <string name="print_preview">Print preview</string>
@@ -62,11 +65,7 @@
     <string name="save_as_pdf">Save as PDF</string>
 
     <!-- Title for the open all printers UI option in the printer list. [CHAR LIMIT=30] -->
-    <string name="all_printers">All printers\.\.\.</string>
-
-    <!-- Title for the searching for printers option in the printer list
-         (only option if not printers are available). [CHAR LIMIT=40] -->
-    <string name="searching_for_printers">Searching for printers\.\.\.</string>
+    <string name="all_printers">All printers&#8230;</string>
 
     <!-- Select printer activity -->
 
